<resources>
    <string name="app_name">SimpleHabit-AKH</string>
    <string name="action_settings">Settings</string>
    <string name="starthere">Start Here</string>
    <string name="simplehabitstarter">Simple Habit Starter</string>
    <string name="start">Start</string>
    <string name="eveningmeditation">Evening Meditation</string>
    <string name="sleepbetter">Sleep Better</string>
    <string name="healthymind">A Healthy Mind</string>
    <string name="calmnerve">Calm Nerves</string>
    <string name="newonsh">New on Simple Habit</string>
    <string name="tofindhappiness">To Find Happiness</string>
    <string name="popular">Most Popular</string>
    <string name="alltopic">All Topics</string>
    <string name="time">5 mins</string>
    <string name="mindful_sleep">Mindful Sleep</string>
    <string name="meditation_series">Meditation Series</string>
    <string name="well_being">Well-Being</string>
    <string name="topic_desc">Inspire joy, abundance, and purpose</string>
    <string name="meditate">Meditate</string>
    <string name="more">More</string>
    <string name="me">Me</string>
    <string name="lemon">Lemon</string>
    <string name="download">Download</string>
    <string name="item_detail">Quick 5 minute meditation after work, when you just got home.</string>
    <string name="read_more">READ MORE</string>
    <string name="sessions">Sessions</string>
    <string name="one">1</string>
    <string name="introducing_mindfulness">Introducing Mindfulness</string>
    <string name="session_period">5:33</string>
    <string name="on_the_go">On The Go</string>
    <string name="teachers">Teachers</string>
</resources>
