<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium_3"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:text="@string/starthere"
        android:textColor="@color/all_white"
        android:textSize="@dimen/text_regular_3x" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        app:cardCornerRadius="@dimen/margin_medium"
        app:cardElevation="@dimen/margin_medium">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/starthere_image_size">

            <ImageView
                android:id="@+id/iv_starthere"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/lemon"
                android:tint="@color/tint_black" />

            <TextView
                android:id="@+id/tv_simple_habit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/btn_start"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/simplehabitstarter"
                android:textColor="@color/all_white"
                android:textSize="@dimen/text_heading_1x" />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_rounded"
                android:drawableLeft="@drawable/ic_play_arrow_24dp"
                android:paddingLeft="@dimen/margin_medium_2"
                android:paddingRight="@dimen/margin_medium_2"
                android:text="@string/start"
                android:textColor="@color/all_white" />

            <ImageView
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/margin_small"
                android:src="@drawable/ic_add_24dp" />

            <TextView
                android:id="@+id/tv_time_start_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/btn_add"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/time"
                android:textColor="@color/all_white"
                android:textSize="@dimen/text_regular_2x" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>